<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">TaleCreate</string>
    <string name="create_label">Create or edit your own interactive tale</string>
    <string name="view_tales_label">View tales</string>
    <string name="see_tale">See</string>
    <string name="my_tales">My tales</string>
    <string name="new_tale">New tale</string>
    <string name="title">Title</string>
    <string name="description">Description</string>
    <string name="upload_image">Upload image</string>
    <string name="author">Author</string>
    <string name="illustrator">Illustrator</string>
    <string name="category">Category</string>
    <string name="front_image">Front image</string>
    <string name="email" translatable="false">e-mail</string>
    <string name="password" translatable="false">Password</string>
    <string name="option_text">Option text</string>
    <string-array
        name="categories">
        <item>2-5 years</item>
        <item>5-9 years</item>
        <item>9-12 years</item>
        <item>upper to 12 years</item>
    </string-array>
    <string name="stages">Stages</string>
    <string name="stage">Stage</string>
    <string name="next_step">Save and continue</string>
    <string name="cancel">Cancel</string>
    <string name="delete_btn_text">Delete</string>
    <string name="delete_confirmation_desc">Are you sure to want remove this tale? this action cannot be undone</string>
    <string name="delete_confirmation_title">Delete tale?</string>
    <string name="chose_image">Choose image</string>
    <string name="save">Save</string>
    <string name="image_trans" translatable="false">image transition</string>
    <string name="stage_text">Stage text</string>
    <string name="stage_image">Stage image</string>
    <string name="stage_title">Stage title</string>
    <string name="add">Add</string>
    <string name="new_stage">New Stage</string>
</resources>
