<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <EditText
            android:id="@+id/editTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginLeft="@dimen/side_margins"
            android:layout_marginRight="@dimen/side_margins"
            android:gravity="center_horizontal"
            android:hint="@string/title"
            android:imeOptions="actionNext"
            android:inputType="text"
            android:minWidth="200dp"
            android:singleLine="true"
            android:textSize="@dimen/title_size" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/front_image"
            android:layout_marginTop="@dimen/side_margins"
            android:layout_marginLeft="@dimen/side_margins"
            android:layout_marginRight="@dimen/side_margins"/>
        <ImageView
            android:id="@+id/frontImage"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/divider"
            android:layout_gravity="center_horizontal" />
        <Button
            style="@style/Button.Rounded.Primary"
            android:id="@+id/buttonUpload"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/upload_image"
            android:layout_marginTop="@dimen/side_margins"
            android:layout_marginLeft="@dimen/side_margins"
            android:layout_marginRight="@dimen/side_margins"/>

        <android.support.design.widget.TextInputLayout
            style="@style/TextAppearance.AppCompat.Medium"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/side_margins_text_input_layout"
            android:layout_marginRight="@dimen/side_margins_text_input_layout"
            android:padding="0dp"
            android:paddingLeft="0dp"
            android:paddingTop="0dp"
            android:paddingRight="0dp"
            android:paddingBottom="0dp">

            <EditText
                android:id="@+id/editAuthor"
                style="@style/TextAppearance.AppCompat.Medium"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/author"
                android:imeOptions="actionNext"
                android:inputType="text"
                android:singleLine="true" />
        </android.support.design.widget.TextInputLayout>
        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/side_margins_text_input_layout"
            android:layout_marginRight="@dimen/side_margins_text_input_layout">

            <EditText
                android:id="@+id/editIllustrator"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/illustrator"
                android:imeOptions="actionNext"
                android:inputType="text"
                android:singleLine="true" />
        </android.support.design.widget.TextInputLayout>
        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="bottom"
            android:layout_marginLeft="@dimen/side_margins_text_input_layout"
            android:layout_marginRight="@dimen/side_margins_text_input_layout">

            <EditText
                android:id="@+id/editDescription"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/description"
                android:imeOptions="actionNext"
                android:inputType="textCapSentences" />
        </android.support.design.widget.TextInputLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginLeft="@dimen/side_margins"
            android:layout_marginTop="@dimen/side_margins">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/category"
                android:layout_marginRight="16dp"
                style="@style/TextAppearance.AppCompat.Medium"/>
            <Spinner
                android:id="@+id/spinnerCategories"
                android:layout_width="match_parent"
                android:layout_height="match_parent"/>
        </LinearLayout>
        <Button
            style="@style/Button.Rounded.Accent"
            android:id="@+id/buttonContinue"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/next_step"
            android:layout_gravity="end"
            android:layout_marginTop="@dimen/side_margins"
            android:layout_marginBottom="@dimen/side_margins"
            android:layout_marginRight="@dimen/side_margins"
            android:paddingRight="12dp"
            android:drawableRight="@drawable/ic_navigate_next_black_24dp"/>
    </LinearLayout>
</ScrollView>