<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="@dimen/side_margins"
        android:paddingRight="@dimen/side_margins">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">
            <EditText
                android:id="@+id/editTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginLeft="@dimen/side_margins"
                android:layout_marginRight="@dimen/side_margins"
                android:gravity="center_horizontal"
                android:hint="@string/title"
                android:imeOptions="actionNext"
                android:inputType="text"
                android:minWidth="200dp"
                android:singleLine="true"
                android:textSize="@dimen/title_size" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/front_image"
                android:layout_marginTop="@dimen/side_margins"
                android:layout_marginLeft="@dimen/side_margins"
                android:layout_marginRight="@dimen/side_margins"/>
            <ImageView
                android:id="@+id/stageImage"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/divider"
                android:layout_gravity="center_horizontal"
                android:scaleType="centerCrop"/>
            <Button
                style="@style/Button.Rounded.Primary"
                android:id="@+id/buttonChooseImage"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/chose_image"
                android:layout_marginTop="@dimen/side_margins"
                android:layout_marginBottom="@dimen/side_margins"/>

            <android.support.design.widget.TextInputLayout
                style="@style/TextAppearance.AppCompat.Medium"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/editAuthor"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/stage_text"
                    android:imeOptions="actionNext"
                    android:inputType="text"
                    android:singleLine="true" />
            </android.support.design.widget.TextInputLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/side_margins"
                    android:text="@string/stages"
                    style="@style/TextAppearance.AppCompat.Medium"/>
                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="+ Add stage"
                    android:layout_gravity="right"/>
            </LinearLayout>

            <ListView
                android:id="@+id/stageList"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/side_margins"
                android:layout_marginRight="@dimen/side_margins"></ListView>
        </LinearLayout>

    </ScrollView>
    <LinearLayout
        android:layout_width="20dp"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:background="@color/transparentBlack">
        <TextView
            android:layout_width="20dp"
            android:layout_height="20dp" />
    </LinearLayout>
    <LinearLayout
        android:layout_width="20dp"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:background="@color/transparentBlack"
        android:layout_gravity="right">
        <TextView
            android:layout_width="20dp"
            android:layout_height="20dp" />
    </LinearLayout>

</FrameLayout>