<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">
    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <ImageView
            android:layout_width="match_parent"
            android:layout_height="250dp"
            android:id="@+id/detailImageView"
            android:layout_gravity="center_horizontal"
            android:transitionName="@string/image_trans"/>
        <Button
            android:layout_margin="4dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|end"
            android:text="@string/see_tale"
            android:drawableRight="@drawable/ic_arrow_forward_white_24dp"/>
    </FrameLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="24dp"
        android:orientation="vertical">
        <TextView
            android:id="@+id/detailTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Title"
            android:textStyle="bold"
            android:textAppearance="?android:attr/textAppearanceLarge" />

        <TextView
            android:id="@+id/detailCategory"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Category"
            android:textAppearance="?android:attr/textAppearanceMedium" />
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="8dp"
                android:text="@string/author"
                android:textStyle="bold"
                android:textAppearance="?android:attr/textAppearanceSmall"/>
            <TextView
                android:id="@+id/detailAuthor"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Medium Text"
                android:textAppearance="?android:attr/textAppearanceSmall" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="8dp"
                android:text="@string/illustrator"
                android:textStyle="bold"
                android:textAppearance="?android:attr/textAppearanceSmall"/>
            <TextView
                android:id="@+id/detailIllustrator"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Medium Text"
                android:textAppearance="?android:attr/textAppearanceSmall" />
        </LinearLayout>

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/side_margins">
            <TextView
                android:id="@+id/detailText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:text="Small Text"
                android:textAppearance="?android:attr/textAppearance" />
        </ScrollView>
    </LinearLayout>


</LinearLayout>